[project]
name = "data-validation-env"
version = "1.0.0"
description = "An RL environment for training agents to clean and validate structured data"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"
